# pcb-defect-detection

./: .gitignore  README.md  pyproject.toml  results-yolov5.csv  utils.py
